--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 requests = "^2.32.3"
 pytest = "^8.3.3"
+psycopg2 = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
